[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/game/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/gui/Theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/gui/letter.png" type="Texture" id=3]
[ext_resource path="res://src/game/Game.gd" type="Script" id=4]
[ext_resource path="res://assets/gui/buttons/exitLeft.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/buttons/return.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/buttons/home.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Complete"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("Complete:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 640, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Complete:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Complete:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 640, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="GameView" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="Top" type="Panel" parent="GameView"]
margin_right = 360.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 140 )

[node name="Display" type="VBoxContainer" parent="GameView/Top"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="Controls" type="HBoxContainer" parent="GameView/Top/Display"]
margin_right = 360.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 260
alignment = 1

[node name="Back" type="Button" parent="GameView/Top/Display/Controls"]
self_modulate = Color( 0.843137, 0.843137, 0.843137, 1 )
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="TextureRect" type="TextureRect" parent="GameView/Top/Display/Controls/Back"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true

[node name="Restart" type="Button" parent="GameView/Top/Display/Controls"]
self_modulate = Color( 0.843137, 0.843137, 0.843137, 1 )
margin_left = 310.0
margin_right = 360.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="TextureRect" type="TextureRect" parent="GameView/Top/Display/Controls/Restart"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true

[node name="Status" type="HBoxContainer" parent="GameView/Top/Display"]
margin_top = 60.0
margin_right = 360.0
margin_bottom = 120.0
custom_constants/separation = 20
alignment = 1

[node name="Panel" type="Panel" parent="GameView/Top/Display/Status"]
self_modulate = Color( 0.827451, 0.827451, 0.827451, 1 )
margin_left = 50.0
margin_right = 170.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )

[node name="Clock" type="VBoxContainer" parent="GameView/Top/Display/Status/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -24.0
margin_right = 60.0
margin_bottom = 24.0

[node name="Text" type="Label" parent="GameView/Top/Display/Status/Panel/Clock"]
margin_right = 120.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
text = "Time"
align = 1

[node name="Value" type="Label" parent="GameView/Top/Display/Status/Panel/Clock"]
margin_top = 26.0
margin_right = 120.0
margin_bottom = 48.0
text = "00:00"
align = 1

[node name="Panel2" type="Panel" parent="GameView/Top/Display/Status"]
self_modulate = Color( 0.827451, 0.827451, 0.827451, 1 )
margin_left = 190.0
margin_right = 310.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )

[node name="Moves" type="VBoxContainer" parent="GameView/Top/Display/Status/Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -24.0
margin_right = 60.0
margin_bottom = 24.0

[node name="Text" type="Label" parent="GameView/Top/Display/Status/Panel2/Moves"]
margin_right = 120.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
text = "Moves"
align = 1

[node name="Value" type="Label" parent="GameView/Top/Display/Status/Panel2/Moves"]
margin_top = 26.0
margin_right = 120.0
margin_bottom = 48.0
text = "0"
align = 1

[node name="BoardView" type="NinePatchRect" parent="GameView"]
margin_top = 140.0
margin_right = 360.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 360 )
texture = ExtResource( 3 )
region_rect = Rect2( 20, 20, 220, 220 )
patch_margin_left = 10
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Board" parent="GameView/BoardView" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -160.0
margin_right = 160.0
margin_bottom = 160.0

[node name="Instructions" type="ColorRect" parent="GameView/BoardView"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.784314 )

[node name="Label" type="Label" parent="GameView/BoardView/Instructions"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Tap Tiles to Move Them"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="GameView"]
margin_top = 500.0
margin_right = 360.0
margin_bottom = 640.0
rect_min_size = Vector2( 0, 140 )

[node name="SolverPanel" type="VBoxContainer" parent="GameView/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -60.0
margin_right = 100.0
margin_bottom = 20.0
custom_constants/separation = 0

[node name="Cheat" type="Button" parent="GameView/Panel/SolverPanel"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 40 )
text = "Instant Solve"

[node name="Solvers" type="Label" parent="GameView/Panel/SolverPanel"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 40 )
text = "0 Instant Solvers Left"
align = 1
valign = 1
autowrap = true

[node name="Back" type="Button" parent="GameView/Panel"]
self_modulate = Color( 0.843137, 0.843137, 0.843137, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -50.0
margin_right = 25.0
rect_min_size = Vector2( 50, 50 )

[node name="TextureRect" type="TextureRect" parent="GameView/Panel/Back"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true

[node name="Timer" type="Timer" parent="."]

[node name="Complete" type="Panel" parent="."]
margin_top = 640.0
margin_right = 360.0
margin_bottom = 1280.0

[node name="Display" type="VBoxContainer" parent="Complete"]
margin_left = 20.0
margin_right = 340.0
margin_bottom = 640.0
rect_min_size = Vector2( 320, 0 )

[node name="GemGain" type="Label" parent="Complete/Display"]
margin_right = 320.0
margin_bottom = 47.0
rect_min_size = Vector2( 0, 47 )
text = "
Gems Gained from Daily Challenge"
align = 1

[node name="GemsWon" type="Label" parent="Complete/Display"]
margin_top = 51.0
margin_right = 320.0
margin_bottom = 81.0
rect_min_size = Vector2( 0, 30 )
text = "0"
align = 1

[node name="Title" type="Label" parent="Complete/Display"]
margin_top = 85.0
margin_right = 320.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 51 )
align = 1
valign = 2
autowrap = true

[node name="Picture" type="TextureRect" parent="Complete/Display"]
margin_top = 140.0
margin_right = 320.0
margin_bottom = 460.0
rect_min_size = Vector2( 320, 320 )
expand = true

[node name="GameMode" type="Label" parent="Complete/Display"]
margin_top = 464.0
margin_right = 320.0
margin_bottom = 504.0
rect_min_size = Vector2( 0, 40 )
text = "3x3"
align = 1
valign = 1

[node name="Status" type="HBoxContainer" parent="Complete/Display"]
margin_top = 508.0
margin_right = 320.0
margin_bottom = 556.0
custom_constants/separation = 20
alignment = 1

[node name="Clock" type="VBoxContainer" parent="Complete/Display/Status"]
margin_left = 30.0
margin_right = 150.0
margin_bottom = 48.0

[node name="Text" type="Label" parent="Complete/Display/Status/Clock"]
margin_right = 120.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
text = "Time"
align = 1

[node name="Value" type="Label" parent="Complete/Display/Status/Clock"]
margin_top = 26.0
margin_right = 120.0
margin_bottom = 48.0
text = "00:00"
align = 1

[node name="Moves" type="VBoxContainer" parent="Complete/Display/Status"]
margin_left = 170.0
margin_right = 290.0
margin_bottom = 48.0

[node name="Text" type="Label" parent="Complete/Display/Status/Moves"]
margin_right = 120.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
text = "Moves"
align = 1

[node name="Value" type="Label" parent="Complete/Display/Status/Moves"]
margin_top = 26.0
margin_right = 120.0
margin_bottom = 48.0
text = "0"
align = 1

[node name="Controls" type="HBoxContainer" parent="Complete"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -60.0
custom_constants/separation = 100
alignment = 1

[node name="Replay" type="Button" parent="Complete/Controls"]
self_modulate = Color( 0.843137, 0.843137, 0.843137, 1 )
margin_left = 70.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )

[node name="TextureRect" type="TextureRect" parent="Complete/Controls/Replay"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true

[node name="Home" type="Button" parent="Complete/Controls"]
self_modulate = Color( 0.843137, 0.843137, 0.843137, 1 )
margin_left = 230.0
margin_right = 290.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )

[node name="TextureRect" type="TextureRect" parent="Complete/Controls/Home"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Complete = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Quit" type="ColorRect" parent="."]
visible = false
margin_right = 360.0
margin_bottom = 640.0
color = Color( 0, 0, 0, 0.784314 )

[node name="QuitMenu" type="VBoxContainer" parent="Quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -122.5
margin_right = 120.0
margin_bottom = 122.5
custom_constants/separation = 20

[node name="Label" type="Label" parent="Quit/QuitMenu"]
margin_right = 240.0
margin_bottom = 125.0
text = "Quitting the game will lose all current progress. Are you sure you want to quit?"
align = 1
valign = 1
autowrap = true

[node name="Quit" type="Button" parent="Quit/QuitMenu"]
margin_top = 145.0
margin_right = 240.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 40 )
text = "QUIT GAME"

[node name="Cancel" type="Button" parent="Quit/QuitMenu"]
margin_top = 205.0
margin_right = 240.0
margin_bottom = 245.0
rect_min_size = Vector2( 240, 40 )
text = "RESUME"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_top = 640.0
margin_right = 360.0
margin_bottom = 1280.0
color = Color( 0, 0, 0, 1 )

[connection signal="button_up" from="GameView/Top/Display/Controls/Back" to="." method="_on_Back_button_up"]
[connection signal="pressed" from="GameView/Top/Display/Controls/Restart" to="." method="_on_Restart_pressed"]
[connection signal="game_started" from="GameView/BoardView/Board" to="." method="_on_Board_game_started"]
[connection signal="game_won" from="GameView/BoardView/Board" to="." method="_on_Board_game_won"]
[connection signal="moves_updated" from="GameView/BoardView/Board" to="." method="_on_Board_moves_updated"]
[connection signal="pressed" from="GameView/Panel/SolverPanel/Cheat" to="." method="_on_Cheat_pressed"]
[connection signal="button_up" from="GameView/Panel/Back" to="." method="_on_Back_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Complete/Controls/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="Complete/Controls/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Quit/QuitMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Quit/QuitMenu/Cancel" to="." method="_on_Cancel_pressed"]
